fixed bug with RServe startup